src/validation/tests/snapshots/rusty__validation__tests__reference_resolve_tests__resolve_function_members_via_qualifier.snap
---
source: src/validation/tests/reference_resolve_tests.rs
expression: "&diagnostics"
---
error: Could not resolve reference to a
  ┌─ <internal>:7:21
  │
7 │                 foo.a; (* not ok *)
  │                     ^ Could not resolve reference to a

error: Could not resolve reference to b
  ┌─ <internal>:8:21
  │
8 │                 foo.b; (* not ok *)
  │                     ^ Could not resolve reference to b

error: Could not resolve reference to c
  ┌─ <internal>:9:21
  │
9 │                 foo.c; (* not ok *)
  │                     ^ Could not resolve reference to c


